--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Website</title>
 </head>
 <body>
+<p>Welcome to Our Website!</p>
 <h1>Hello,World!</h1>
 <p>Welcome to Our Website!</p>
 </body>
